# pianify

./: .gitignore  CMakeLists.txt  README.md
config/: directories.h.in
design/: converterdialog.ui  instrumentrecognizerdialog.ui  mainwindow.ui  progressbardialog.ui
include/Client/: Client.h  DataMappingTools.hpp
include/Converter/: Amplitude.hpp  Extractor.h  FourierTransform.h  Frequency.hpp  IExportFile.h  ISoundFile.h  Instrument.h  InstrumentMappingTools.h  MidiExporter.h  MidiGenerator.h  Pianify.h  WaveFile.h  fft_data.h  utilities.hpp
include/DatasetHelper/: FileReader.h  FileWriter.h
include/GUI/: converterdialog.h  instrumentrecognizerdialog.h  mainwindow.h  progressbardialog.h
include/InstrumentRecognizer/: Model.h
model/: net
script/: CMakeRegenerate.bat
src/: CMakeLists.txt
src/CLI/: CMakeLists.txt  main.cpp
src/Client/: CMakeLists.txt  client.cpp  main.cpp
src/Converter/: CMakeLists.txt  Extractor.cpp  FourierTransform.cpp  InstrumentMappingTools.cpp  MidiExporter.cpp  MidiGenerator.cpp  Pianify.cpp  WaveFile.cpp
src/DatasetHelper/: CMakeLists.txt  FileReader.cpp  FileWriter.cpp
src/GUI/: CMakeLists.txt  Main.cpp  converterdialog.cpp  instrumentrecognizerdialog.cpp  mainwindow.cpp  progressbardialog.cpp
src/InstrumentRecognizer/: CMakeLists.txt  Model.cpp
src/Tests/: CMakeLists.txt  amplitude_tests.cpp  fourier_transform_tests.cpp  frequency_tests.cpp  tests1.cpp
